round 1 of corrections

--- a/anarock.html
+++ b/anarock.html
@@ -234,7 +234,7 @@
             <div class="flex flex-col gap-2">
                 <p class="text-xl font-bold">Overview of the Final Design</p>
             </div>
-            <p class="text-gray-400">The CHIP application was designed to be role-sensitive, offline-capable, and workflow-driven — addressing real-life needs of ASHAs, ANMs, CHOs, and PHC-level staff across rural healthcare settings.</p>
+            <p class="text-gray-400 font-light">The CHIP application was designed to be role-sensitive, offline-capable, and workflow-driven — addressing real-life needs of ASHAs, ANMs, CHOs, and PHC-level staff across rural healthcare settings.</p>
 
             <ul class="list-disc list-inside text-gray-400 space-y-2 m1-4">
                 <li>Homepage and navigation auto-adjust based on the user's role and facility level.</li>
@@ -246,68 +246,78 @@
         <!-- UI Designs - section wise -->
         <div class="grid grid-cols-1 gap-8 lg:w-3/5 lg:m-auto lg:px-0">
 
-            <!-- Out Patient Department (OPD) -->
+            <!-- Channel Partner(CP)/Organisation Onboarding -->
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Out Patient Department (OPD)</h3>
-                        <p class="text-gray-400">This module handles the entire OPD workflow, from patient arrival to consultation and treatment. It integrates queue management, displaying patient status and prioritizing cases based on urgency. Health workers can manage patient flow, assign tokens, and streamline movement between different service points (e.g., consultation, lab tests, pharmacy). The system tracks patients' progress through the OPD process, ensuring efficient and timely care.</p>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">Channel Partner(CP)/Organisation Onboarding</h3>
+                        <p class="text-gray-400 font-light">First time user will onboard by using number and OTP following with the filling personal details and then continues by choosing between he owns an organisation or he is individual CP. CP also has to fll his organisation details like RERA details.</p>
 
                         <div class="w-full mt-4">
-                            <img src="./images/samasta/feature_1_1.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                            <img src="./images/anarock/onboarding.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Inventory Management -->
+            <!-- Digital Visiting Card -->
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Inventory Management</h3>
-                        <p class="text-gray-400">Helps manage medical supplies and resources efficiently. This module tracks stock levels of medicines, vaccines, and equipment in real time, sends alerts for low stock, and generates restocking orders. It also maintains a history of usage, expiration dates, and supply chain updates.</p>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">Digital Visiting Card</h3>
+                        <p class="text-gray-400 font-light">Digital Visiting Card is a CP's visiting card which he can share with the potential clients to let them know that he is with the organisation or he has official RERA ID. Here user can create the visiting card by filling all the necessary details and then choose of the templete to select his visiting card. User can also upload the existing visiting card by uploading it.</p>
 
                         <div class="w-full mt-4">
-                            <img src="./images/samasta/feature_2_1.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                            <img src="./images/anarock/dvc.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Patient Registration -->
+            <!-- Project - Filters, Listing, Project Details -->
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Inventory Management</h3>
-                        <p class="text-gray-400">Streamlines patient intake by allowing health workers to efficiently capture patient details, demographic information, and medical history. This module offers a user-friendly form with auto-fill features, reducing data entry time and ensuring accuracy. Integrated with Aadhaar and other identification systems for quick verifications.</p>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">Project - Filters, Listing, Project Details</h3>
+                        <p class="text-gray-400 font-light">CPs can view the Project Listing to view projects toview project details and offers that comes along with projects which they can avail after selling the project. Users can also filter the projects according to their need and also sort the listing to view accordingly. In project details they can share the project details with the client for them to understand in & out of the project.</p>
 
                         <div class="w-full mt-4">
-                            <img src="./images/samasta/feature_3_1.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                            <img src="./images/anarock/project-listing.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                        </div>
+
+                        <div class="w-full mt-4">
+                            <img src="./images/anarock/project-details.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                        </div>
+
+                        <p class="text-gray-400 font-light">When the user opens the app he sees Homepage where he can see the nudges which gives him immediate actionables, advetisement section which will help marketing team to market new projects,app features, etc. , Then he gets summary of his customers at differnent stages in CRM,and then finally he sees all the finance summary. User can also view the favorite projects from the top bar of the app. USer also get the more options from side naviagtion.</p>
+
+                        <div class="w-full mt-4">
+                            <img src="./images/anarock/homepage.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Outreach activity -->
+            <!-- Profile -->
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Outreach activity</h3>
-                        <p class="text-gray-400">Enables health workers to plan and track community outreach initiatives. This module includes features for scheduling immunization drives, health camps, and follow-up visits, with integrated reminders. It also logs outreach efforts, records attendance, and syncs data with centralized health records to ensure continuity of care.</p>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">Profile</h3>
+                        <p class="text-gray-400 font-light">Profile contains all the details about the CP which he can edit at any given time. CP can change Profile Pictue from here and verify his email.</p>
 
                         <div class="w-full mt-4">
-                            <img src="./images/samasta/feature_4_1.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                            <img src="./images/anarock/profile.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Dashboard -->
+            <!-- My Team -->
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Dashboard</h3>
-                        <p class="text-gray-400">A centralized hub for higher-level officials to monitor OPD performance, track patient visits, and view trends in disease outbreaks and medication prescriptions. This module provides data visualization through charts and graphs, giving insights into resource allocation, patient demographics, and the effectiveness of interventions.</p>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">My Team</h3>
+                        <p class="text-gray-400 font-light">My Team in bottom navigation will only be visible to organisation profile. It will contain all the team members. Team owner and admin can edit the details of team members.</p>
 
                         <div class="w-full mt-4">
                             <img src="./images/samasta/feature_5_1.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
