--- a/anarock.html
+++ b/anarock.html
@@ -69,7 +69,7 @@
             <nav>
                 <ul class="flex space-x-6">
                 <li><a href="./about.html" class="text-white hover:text-amber-300 py-2 transition-all duration-300">About me</a></li>
-                <li><a href="#" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Projects</a></li>
+                <li><a href="./index.html#projects" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Projects</a></li>
                 <li><a href="mailto:workspcae0105@gmai.com" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Contact</a></li>
                 </ul>
             </nav>
