invest images added

--- a/project-1.html
+++ b/project-1.html
@@ -152,37 +152,37 @@
 
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-8">
             <!-- Research & Strategy -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3">
+            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3 items-center text-center">
                 <p class="text-xl font-medium">Research & Strategy</p>
                 <p class="text-gray-400 font-light">Fieldwork-driven insights and stakeholder collaboration to align user needs with public health program goals.</p>
             </div>
 
             <!-- Experience Design -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3">
+            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3 items-center text-center">
                 <p class="text-xl font-medium">Experience Design</p>
                 <p class="text-gray-400 font-light">Designed user-centered solutions grounded in field research and aligned with national health program objectives.</p>
             </div>
 
             <!-- Wireframing & Prototyping -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3">
+            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3 items-center text-center">
                 <p class="text-xl font-medium">Wireframing & Prototyping</p>
                 <p class="text-gray-400 font-light">Crafted scalable, role-flexible flows and interactive prototypes with built-in logic and form-level precision.</p>
             </div>
 
             <!-- Visual Design -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3">
+            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3 items-center text-center">
                 <p class="text-xl font-medium">Visual Design</p>
                 <p class="text-gray-400 font-light">Designed an intuitive, bilingual interface tailored for rural users—focusing on clarity, accessibility, and recognition.</p>
             </div>
 
             <!-- Testing & Iteration -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3">
+            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3 items-center text-center">
                 <p class="text-xl font-medium">Testing & Iteration</p>
                 <p class="text-gray-400 font-light">Validated designs with frontline users and continuously refined features for usability, accessibility, and performance in the field.</p>
             </div>
 
             <!-- Collaboration & Handoff -->
-            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3">
+            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6 gap-2 lg:gap-3 items-center text-center">
                 <p class="text-xl font-medium">Collaboration & Handoff</p>
                 <p class="text-gray-400 font-light">Streamlined design-to-dev handoff with clear specs, close tech collaboration, and iterative improvements post-deployment.</p>
             </div>
