--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <!-- Left: Project Image -->
                     <div class="w-1/2 w-full lg:order-1">
                         <a href="./invest.html" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/anarock/anarock_thumbnail.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                            <img src="./images/invest/invest_thumbnail.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </a>
                     </div>
               
@@ -270,7 +270,7 @@
                     <!-- Left: Project Image -->
                     <div class="w-1/2 w-full lg:order-2">
                         <a href="./ux-animation.html">
-                            <img src="./images/tarp/tarp_thumbnail.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                            <img src="./images/animation/animation-2-cropped.gif" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </a>
                     </div>
               
