--- a/ux-animation.html
+++ b/ux-animation.html
@@ -261,7 +261,8 @@
 
                         <div class="w-full mt-4">
                             <video 
-                              src="./images/animation/Animation 7.mp4" 
+                              src="./images/animation/animation-7.mp4"
+
                               autoplay 
                               muted 
                               loop 
@@ -269,7 +270,7 @@
                               class="w-full h-auto object-cover rounded-xl lg:rounded-3xl">
                               Your browser does not support the video tag.
                             </video>
-                        </div>                          
+                        </div>
                     </div>
                 </div>
             </div>
@@ -281,17 +282,10 @@
                         <h3 class="text-2xl lg:text-3xl font-semibold">Animation 4</h3>
                         <p class="text-gray-400 font-light mt-3">The profile section is essential for establishing credibility and trust within the app, allowing both investors and startup owners to showcase their backgrounds, expertise, and objectives. The investor profile provides a comprehensive view of their investment history, interests, and areas of expertise. It includes personal information such as the investor's name, profile picture, and a brief bio highlighting their professional background and investment philosophy. Additionally, the profile features a list of past investments, detailing the startup names, amounts invested, and the outcomes of those investments, as well as a section for preferred industries to aid in personalized startup recommendations. Connection options for direct messaging or scheduling meetings with startup owners promote networking and collaboration.</p>
 
-                        <div class="w-full mt-4">
-                            <video 
-                              src="./images/animation/Animation 5.mp4" 
-                              autoplay 
-                              muted 
-                              loop 
-                              playsinline 
-                              class="w-full h-auto object-cover rounded-xl lg:rounded-3xl">
-                              Your browser does not support the video tag.
-                            </video>
-                        </div>
+                        <video autoplay muted loop playsinline class="w-full h-auto object-cover rounded-xl lg:rounded-3xl">
+                            <source src="./images/animation/animation-5.mp4" type="video/mp4" />
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                 </div>
             </div>
@@ -303,9 +297,10 @@
                         <h3 class="text-2xl lg:text-3xl font-semibold">Animation 5</h3>
                         <p class="text-gray-400 font-light mt-3">The profile section is essential for establishing credibility and trust within the app, allowing both investors and startup owners to showcase their backgrounds, expertise, and objectives. The investor profile provides a comprehensive view of their investment history, interests, and areas of expertise. It includes personal information such as the investor's name, profile picture, and a brief bio highlighting their professional background and investment philosophy. Additionally, the profile features a list of past investments, detailing the startup names, amounts invested, and the outcomes of those investments, as well as a section for preferred industries to aid in personalized startup recommendations. Connection options for direct messaging or scheduling meetings with startup owners promote networking and collaboration.</p>
 
-                        <div class="w-full mt-4">
-                            <img src="./images/animation/animation-4.mp4" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
-                        </div>
+                        <video autoplay muted loop playsinline class="w-full h-auto object-cover rounded-xl lg:rounded-3xl">
+                            <source src="./images/animation/animation-6.mp4" type="video/mp4" />
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                 </div>
             </div>
@@ -314,7 +309,7 @@
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 5</h3>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 6</h3>
                         <p class="text-gray-400 font-light mt-3">The profile section is essential for establishing credibility and trust within the app, allowing both investors and startup owners to showcase their backgrounds, expertise, and objectives. The investor profile provides a comprehensive view of their investment history, interests, and areas of expertise. It includes personal information such as the investor's name, profile picture, and a brief bio highlighting their professional background and investment philosophy. Additionally, the profile features a list of past investments, detailing the startup names, amounts invested, and the outcomes of those investments, as well as a section for preferred industries to aid in personalized startup recommendations. Connection options for direct messaging or scheduling meetings with startup owners promote networking and collaboration.</p>
 
                         <!-- <div class="w-full mt-4">
@@ -323,7 +318,8 @@
 
                         <div class="w-full mt-4">
                             <video 
-                              src="./images/animation/animation-6.mp4" 
+                              src="./images/animation/Animation 3.mp4"
+
                               autoplay 
                               muted 
                               loop 
@@ -331,7 +327,7 @@
                               class="w-full h-auto object-cover rounded-xl lg:rounded-3xl">
                               Your browser does not support the video tag.
                             </video>
-                        </div>                          
+                        </div>
                     </div>
                 </div>
             </div>
@@ -340,11 +336,20 @@
             <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 5</h3>
+                        <h3 class="text-2xl lg:text-3xl font-semibold">Animation 7</h3>
                         <p class="text-gray-400 font-light mt-3">The profile section is essential for establishing credibility and trust within the app, allowing both investors and startup owners to showcase their backgrounds, expertise, and objectives. The investor profile provides a comprehensive view of their investment history, interests, and areas of expertise. It includes personal information such as the investor's name, profile picture, and a brief bio highlighting their professional background and investment philosophy. Additionally, the profile features a list of past investments, detailing the startup names, amounts invested, and the outcomes of those investments, as well as a section for preferred industries to aid in personalized startup recommendations. Connection options for direct messaging or scheduling meetings with startup owners promote networking and collaboration.</p>
 
                         <div class="w-full mt-4">
-                            <img src="./images/animation/animation-4.mp4" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                            <video 
+                              src="./images/animation/animation-4.mp4"
+
+                              autoplay 
+                              muted 
+                              loop 
+                              playsinline 
+                              class="w-full h-auto object-cover rounded-xl lg:rounded-3xl">
+                              Your browser does not support the video tag.
+                            </video>
                         </div>
                     </div>
                 </div>
