animation text added

--- a/ux-animation.html
+++ b/ux-animation.html
@@ -84,7 +84,7 @@
         </div>
         
         <div class="lg:w-5/5 mt-4 lg:mx-auto">
-            <img src="./images/invest/invest_cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg lg:rounded-4xl" />
+            <img src="./images/animation/main.gif" alt="Descriptive alt text" class="w-full h-auto rounded-lg lg:rounded-4xl" />
         </div>
     </div>
 
